--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     height: 70vh;
     width: 40vh;
     top: 30%;
-    left: 4%;
+    left: 10%;
     display: flex;
     flex-direction: column;
     align-items:flex-start;
@@ -17,7 +17,7 @@ a {color:yellow;
 .header
     {
         top: 15%;
-        left: 4%;
+        left: 10%;
 color: rgb(255, 149, 79);
 font-size: 20pt;
 font-family: 'hwt-mardell', sans-serif;
@@ -35,7 +35,7 @@ position: absolute;
         color: rgb(201, 192, 255);
         position: absolute;
             top: 9%;
-            left: 4%;
+            left: 10%;
             display: flex;
             flex-direction: row;
             align-items:flex-start;}
@@ -46,7 +46,7 @@ body {background-color: black;}
     height: 2600vh;
     width: 1000vh;
     top: .7%;
-    left: 10%;
+    left: 8%;
     display: flex;
     flex-direction: column;
     align-items:flex-start;
@@ -77,3 +77,16 @@ img {height: 80vh;
         
 .container2:hover {animation-play-state: paused;}
 body {overflow: hidden;}
+
+#buttonright {position: absolute;
+    height: 80px;
+    width: 80px;
+    top: 40%;
+    left: 89%;
+    display: flex;}
+#buttonleft {position: absolute;
+    height: 80px;
+    width: 80px;
+    top: 40%;
+    left: 1%;
+    display: flex;}
